# llm-play

./: .gitignore  Makefile  init.sh  pyproject.toml
llmcore/api/: gpt4_client.py
